# pure-flow

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: i2c_bus.rs  main.rs  sfa30.rs  transport.rs
src/ble/: advertiser.rs  mod.rs  sensor_packet.rs
src/domain/: mod.rs  sensor_data.rs
src/sensors/: mod.rs  scd40.rs  sen55.rs  sensirion.rs  sfa30.rs
