[package]
edition = "2024"
name = "nrf52840-sfa30"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
embassy-executor = { version = "0.10", features = ["executor-thread", "platform-cortex-m", "defmt"] }
embassy-nrf = { version = "0.11", features = ["nrf52840", "gpiote", "time-driver-rtc1", "defmt"] }
embassy-time = { version = "0.5", features = ["tick-hz-32_768", "defmt"] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

defmt = "1"
defmt-rtt = "1"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
panic-probe = { version = "1", features = ["print-defmt"] }
static_cell = "2.1.1"
trouble-host = { version = "0.7", features = [
    "peripheral",
    "gatt",
    "derive",
] }

[profile.release]
debug = 2

[package.metadata.embassy]
build = [
  { target = "thumbv7em-none-eabi", artifact-dir = "out/examples/nrf52840" }
]
